# polynneal

./: .gitignore  CMakeLists.txt  README.md  generate-graphs.bash  generate-reports.bash
cmake_modules/: FindGMP.cmake
graphs/: exhibit.py
reports/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv
src/: geo.hpp  gui.cpp  gui.hpp  line_shape.cpp  line_shape.hpp  main.cpp  polynneal.cpp  polynneal.hpp
